reworking Field.java, now it's managing all modification of data